--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
         <div class="section">
             <h1>Voter Eligibility Checker</h1>
+            <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the <br> elections.</p> <br>
             <P>Enter your age to check if you are eligible to vote:</P>
-            <br>
-            <input type="text" class="text" placeholder="FullName......"> 
-            <input type="number" name="number" id="age" placeholder="Input Age">
-            <button id="btn" onclick="checkEligibility()">Check Eligibility</button>
+            <section>
+            <input type="text" id="text" placeholder="FullName......"> 
+            <input type="number" name="number" id="age" placeholder="      Input Age">
+            <button id="btn" onclick="checkEligibility()">Check Now</button>
             <p id="result"> </p>
+        </section> 
         </div>
         <script>
         function checkEligibility() {
