--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
 </head>
 <body>
 
-        <div class="section">
-            <h1>Voter Eligibility Checker</h1>
-            <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the <br> elections.</p> <br>
-            <P>Enter your age to check if you are eligible to vote:</P>
-            <section>
-            <input type="text" id="text" placeholder="FullName......"> 
-            <input type="number" name="number" id="age" placeholder="      Input Age">
-            <button id="btn" onclick="checkEligibility()">Check Now</button>
-            <p id="result"> </p>
+    <main class="section">
+
+        <h1>Voter Eligibility Checker</h1>
+
+        <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the elections.</p>
+
+        <P>Enter your age to check if you are eligible to vote:</P>
+
+        <section>
+
+        <input type="text" id="text" placeholder="FullName......"> 
+
+        <input type="number" name="number" id="age" placeholder="Input Age">
+
+        <button id="btn" onclick="checkEligibility()">Check Now</button>
+        
+        <p id="result"> </p>
+
         </section> 
-        </div>
-        <script src="main.js"></script>
+
+    </main>
+
+    <script src="main.js"></script>
 </body>
 </html>
