--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
 </head>
 <body>
 
-    <main class="section">
-
-        <h1>Voter Eligibility Checker</h1>
-
-        <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the elections.</p>
-
-        <P>Enter your age to check if you are eligible to vote:</P>
+    <main>
 
         <section>
 
-        <input type="text" id="text" placeholder="FullName......"> 
+            <h1>Voter Eligibility Checker</h1>
 
-        <input type="number" name="number" id="age" placeholder="Input Age">
+            <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the elections.</p>
 
-        <button id="btn" onclick="checkEligibility()">Check Now</button>
-        
-        <p id="result"> </p>
+            <P>Enter your age to check if you are eligible to vote:</P>
 
-        </section> 
+            <div class="input-box">
+
+                <input type="text" id="text" placeholder="FullName......"> 
+
+                <input type="number" name="number" id="age" placeholder="Input Age">
+                <br
+                />
+                <button id="btn" onclick="checkEligibility()">Check Now</button>
+
+            </div>
+
+            <p id="result"> </p>
+
+        </section>
 
     </main>
 
