--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <section>
 
-            <h1>Voter Eligibility Checker</h1>
+            <h1>Voter Eligibility <span class="checker">Checker</span></h1>
 
-            <p>A web-based application that allows users to determine eligibility to vote. By inputting <br> their age, the application quickly assesses whether they are old enough to participate in the elections.</p>
-
-            <P>Enter your age to check if you are eligible to vote:</P>
+            <p>A web-based application that allows users to determine eligibility to vote. By inputting their age, the application quickly assesses whether they are old enough to participate in the elections.</p>
 
             <div class="input-box">
+
+                <label for="">Enter your age to check if you are eligible to vote:</label>
 
                 <input type="text" id="text" placeholder="FullName......"> 
 
